syntax="proto3";

package NAlice.NSocialSharing;
option go_package = "a.yandex-team.ru/alice/paskills/social_sharing/proto/api";
option java_package = "ru.yandex.alice.social.sharing.proto";
option java_outer_classname = "SocialSharingApi";

import "alice/paskills/social_sharing/proto/api/directives.proto";
import "alice/paskills/social_sharing/proto/api/web_page.proto";

message TCreateCandidateRequest {
    uint64 RandomSeed = 1;
    oneof Directive {
        TCreateSocialLinkDirective CreateSocialLinkDirective = 2 [json_name = "create_social_link_directive"];
    }
}

message TSocialLink {
    string Url = 1 [json_name = "url"];
    string Id = 2 [json_name = "id"];
}

message TError {
    string Code = 1 [json_name = "code"];
    string Message = 2 [json_name = "message"];
}

message TCreateCandidateResponse {
    oneof Result {
        TSocialLink Link = 1 [json_name = "link"];
        TError Error = 2 [json_name = "error"];
    }
}

message TCommitCandidateRequest {
    string CandidateId = 1;
}

message TCommitCandidateResponse {

    message TOk {

    }

    oneof Result {
        TOk Ok = 1 [json_name = "ok"];
        TError Error = 2 [json_name = "error"];
    }
}

message TCreateAndCommitRequest {
    uint64 RandomSeed = 1;
    oneof Directive {
        TCreateSocialLinkDirective CreateSocialLinkDirective = 2 [json_name = "create_social_link_directive"];
    }
}

message TCreateAndCommitResponse {
    oneof Result {
        TSocialLink Link = 1 [json_name = "link"];
        TError Error = 2 [json_name = "error"];
    }
}

